# TL_LATAM_Scraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PLAN_PARTE2.md  README.md  pyproject.toml
app/: __init__.py  config.py  dispatcher.py  logging.py  main.py
app/adapters/: __init__.py  base.py  falabella.py  mercadolibre.py
app/agents/: __init__.py  dom_utils.py  payment_extractor.py  product_enricher.py
app/graph/: __init__.py  scraper.py
app/schemas/: __init__.py  catalog.py  error.py  request.py  response.py
scripts/: __init__.py  cases.yaml  eval.py
tests/: conftest.py  test_agents.py  test_dispatcher.py  test_endpoint_ml.py  test_extractor_offline.py  test_falabella_adapter.py  test_graph.py  test_health.py  test_ml_adapter.py  test_schemas.py
tests/fixtures/: falabella_checkout_full.html  falabella_cl_checkout.html  falabella_pdp.html  ml_item.json  ml_payment_methods_mla.json
