[project]
name = "tl-latam-scraper"
version = "0.1.0"
description = "Multi-Agent Scraping System for LATAM E-commerce — Tech Lead Assessment Part 2"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Sergio Iván Villamizar Delgado" }
]
license = { text = "MIT" }

dependencies = [
    # HTTP API
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # HTTP client (para Mercado Libre API publica)
    "httpx>=0.27.0",
    # Browser automation
    "playwright>=1.49.0",
    "playwright-stealth>=1.0.6",
    # Agent framework
    "langgraph>=0.2.50",
    "langchain-anthropic>=0.3.0",
    "anthropic>=0.40.0",
    # Logging y config
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    # Eval harness
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",  # para TestClient async
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
markers = [
    "live: requires network and real LLM API key (deselected by default)",
]
addopts = "-m 'not live' -v"
